# crazyflie-firmware

./: Makefile
src/slam/: CMakeLists.txt  CyclicBuffer_addPos.h  CyclicBuffer_addPos_data.h  CyclicBuffer_addPos_initialize.c  CyclicBuffer_addPos_rtwutil.c  CyclicBuffer_addPos_rtwutil.h  CyclicBuffer_addPos_terminate.h  CyclicBuffer_addPos_types.h  CyclicBuffer_addProx.c  CyclicBuffer_addProx.h  CyclicBuffer_addPsi.c  CyclicBuffer_addPsi_initialize.h  CyclicBuffer_addPsi_terminate.c  CyclicBuffer_addPsi_types.h  SaM.h  abs.c  abs.h  abscissas2endPoints.c  batchSplitFit.c  batchSplitFit.h  cf_feat_ext.c  cf_feat_ext.h  cf_feat_ext_initialize.c  cf_feat_ext_initialize.h  cf_feat_ext_terminate.c  cf_feat_ext_terminate.h  cf_feat_ext_types.h  correctBlockEkf.c  correctBlockEkf.h  correctKnownLmksExperiment.c  correctKnownLmksExperiment.h  createLandmarks.c  createLandmarks.h  createObservations.c  createObservations.h  diff.c  extractFeaturesWorld.c  filter.c  filter.h  filtfilt.c  (+53 more)
src/slam/.metadata/: version.ini
src/slam/.metadata/.mylyn/.taskListIndex/: segments_1
src/slam/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
src/slam/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
src/slam/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
src/slam/unitTestFiles/: cbaPos_ins.txt  cbaPos_outs.txt  cbaProx_ins.txt  cbaProx_outs.txt  cbaPsi_ins.txt  cbaPsi_outs.txt  fid_sequence_log.txt  initial_pose.txt  inputs.txt  outputs.txt  outs_new.txt  sov_outs.txt  stepBsync_outs.txt  usafap_outs.txt
(+187 files in other folders)
